opam-version: "2.0"
synopsis: "Discord bot on the yggdrasill"
maintainer: ["Yuki Tajiri <lmdexpr@gmail.com>"]
authors: ["Yuki Tajiri"]
license: "MIT"
homepage: "https://github.com/lmdexpr/ratatoskr"
bug-reports: "https://github.com/lmdexpr/ratatoskr/issues"
depends: [
  "dune"
  "merlin"
  "disml"
  "core"
  "async"
]
